<resources>
    <string name="app_name">TastefulTable</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">From Home fragment</string>
    <string name="from_favorite_fragment">From Favorite Fragment</string>
    <string name="from_app_share_fragment">From App Share Fragment</string>
    <string name="from_my_account_fragment">From My Account Fragment</string>

    <string name="hyperlinkRegister">New User? Register Now</string>
    <string name="hyperlinkLogin">Already Register? Login Here</string>
    <string name="ingredients">Ingredients Required</string>
    <string name="directions_to_prepare">Directions to Prepare</string>
    <string name="register">Register</string>
    <string name="here_s_your_first_step_with_us">Here\'s your first step with us!</string>
    <string name="use_other_methods">---------- Use other methods ----------</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password_mismatch">Password and confirm password should be matched!</string>
    <string name="password_length_constraint">Password should contain at least 6 characters!</string>
    <string name="confirm_password_length_constraint">Confirm Password should contain at least 6 characters!</string>
    <string name="email_constraint">Please enter proper email address!</string>
    <string name="validate_all_registrations_inputs">Please fill all fields!</string>
    <string name="welcome">Welcome</string>
    <string name="user_not_registered">User is not registered. Please Register yourself.</string>
    <string name="user_already_registered">User is already registered. Please try to login.</string>
    <string name="alert_title">Notice.</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="_1_hour_10_mins">1 Hour 10 Mins</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="_4729_calories">4729 Calories</string>
    <string name="_4_servings">4 Servings</string>
    <string name="_18">18</string>
    <string name="count">Count</string>
    <string name="hello">Hello</string>
    <string name="like">Like</string>
    <string name="recipe">Recipe</string>
    <string name="vandana">vandana</string>
    <string name="home">Home</string>
    <string name="my_account">My Account</string>
    <string name="favourites">Favourites</string>
    <string name="share_app">Share App</string>
    <string name="shuffle">Shuffle</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
</resources>